--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -10,7 +10,7 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input 
@@ -22,12 +22,16 @@
             </div>
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <input 
+                <!-- <input 
                     class="<%= validationError.find(e => e.param == 'imageUrl') ? 'invalid' : '' %>"
                     type="text" 
                     name="imageUrl" 
                     id="imageUrl" 
-                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
+                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>"> -->
+                    <input 
+                        type="file"
+                        name="image"
+                        id="image">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
