--- a/views/500.ejs
+++ b/views/500.ejs
@@ -3,7 +3,7 @@
 
 <body>
     <%- include('includes/navigation.ejs') %>
-    <h1>data base error.!</h1>
-    <p>We will fix this bug soon.!</p>
+    <h1>Some error occurred!</h1>
+    <p>We're working on fixing this, sorry for the inconvenience!</p>
 
 <%- include('includes/end.ejs') %>
