--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -14,29 +14,32 @@
             <div class="form-control">
                 <label for="title">Title</label>
                 <input 
-                class="<%= validationError.find(e => e.param == 'title') ? 'invalid' : '' %>"
-                type="text" 
-                name="title" 
-                id="title" 
-                value="<% if (editing || hasError) { %><%= product.title %><% } %>">
+                    class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : '' %>"
+                    type="text" 
+                    name="title" 
+                    id="title" 
+                    value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <!-- <input 
-                    class="<%= validationError.find(e => e.param == 'imageUrl') ? 'invalid' : '' %>"
+                <input 
+                    class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>"
                     type="text" 
                     name="imageUrl" 
                     id="imageUrl" 
-                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>"> -->
-                    <input 
-                        type="file"
-                        name="image"
-                        id="image">
+                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
+            </div> -->
+            <div class="form-control">
+                <label for="image">Image</label>
+                <input 
+                    type="file" 
+                    name="image" 
+                    id="image" >
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
                 <input 
-                    class="<%= validationError.find(e => e.param == 'price') ? 'invalid' : '' %>"
+                    class="<%= validationErrors.find(e => e.param === 'price') ? 'invalid' : '' %>"
                     type="number" 
                     name="price" 
                     id="price" 
@@ -46,11 +49,10 @@
             <div class="form-control">
                 <label for="description">Description</label>
                 <textarea 
-                class="<%= validationError.find(e => e.param == 'description') ? 'invalid' : '' %>"
-                name="description" 
-                id="description" 
-                rows="5">
-                <% if (editing || hasError) { %><%= product.description %><% } %></textarea>
+                    class="<%= validationErrors.find(e => e.param === 'description') ? 'invalid' : '' %>"
+                    name="description" 
+                    id="description" 
+                    rows="5"><% if (editing || hasError) { %><%= product.description %><% } %></textarea>
             </div>
             <% if (editing) { %>
                 <input type="hidden" value="<%= product._id %>" name="productId">
