--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -12,27 +12,30 @@
         <% } %>
         <form class="login-form" action="/signup" method="POST" novalidate>
             <div class="form-control">
-                <label for="text">E-Mail</label>
+                <label for="email">E-Mail</label>
                 <input 
-                    class="<%= validationError.find(e => e.param == 'email') ? 'invalid' : '' %>"
+                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
                     type="email" 
-                    name="email" id="email" 
+                    name="email" 
+                    id="email" 
                     value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input 
-                    class="<%= validationError.find(e => e.param == 'password') ? 'invalid' : '' %>"
+                    class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
                     type="password" 
-                    name="password" id="password" 
+                    name="password" 
+                    id="password" 
                     value="<%= oldInput.password %>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
                 <input 
-                    class="<%= validationError.find(e => e.param == 'confirmPassword') ? 'invalid' : '' %>"
+                    class="<%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>"
                     type="password" 
-                    name="confirmPassword" id="confirmPassword" 
+                    name="confirmPassword" 
+                    id="confirmPassword" 
                     value="<%= oldInput.confirmPassword %>">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
